--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-examples-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-excelant-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/poi-scratchpad-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/ooxml-lib/curvesapi-1.04.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="/home/raghav/Downloads/poi-3.17/lib/commons-collections4-4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
