--- a/bin/.classpath
+++ b/bin/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_101"/>
 	<classpathentry kind="lib" path="D:/java_jars/poi-3.17.jar"/>
 	<classpathentry kind="lib" path="D:/java_jars/jar_files/poi-ooxml-3.17.jar"/>
 	<classpathentry kind="lib" path="D:/java_jars/jar_files/xmlbeans-2.6.0.jar"/>
